# DigitalTwin_ROS2-Manipulator

./: .gitignore  README.md  start_gui.sh  start_joystick.sh  start_moveit_digitaltwin.sh
src/: CLAUDE.md
src/arduinobot_bringup/: CMakeLists.txt  package.xml
src/arduinobot_bringup/launch/: arduinobot_bringup_hardware.py
src/arduinobot_controller/: CMakeLists.txt  package.xml
src/arduinobot_controller/src/: arduinobot_interface.cpp
src/arduinobot_description/: CMakeLists.txt  package.xml
src/arduinobot_description/launch/: display.launch.py  gazebo.launch.py
src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_ros2_control.xacro
src/arduinobot_firmware/: CMakeLists.txt  package.xml
src/arduinobot_firmware/arduinobot_firmware/: gui_hardware_controller.py  joystick_hardware_controller.py  live_hardware_controller.py
src/arduinobot_firmware/firmware/live_moveit_control/: live_moveit_control.ino
src/arduinobot_firmware/firmware/motor_calibration/: motor_calibration.ino
src/arduinobot_firmware/launch/: gui_control.launch.py  joystick_control.launch.py  moveit_digitaltwin.launch.py
src/arduinobot_moveit/: CMakeLists.txt  package.xml
src/arduinobot_moveit/config/: arduinobot.srdf  digital_twin.rviz  joint_limits.yaml  moveit_controllers.yaml
src/arduinobot_moveit/launch/: moveit.launch.py
